Fixed footer (go top) button alignment.

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -57,9 +57,9 @@ footer .social-links li:first-child { margin-left: 0; }
 /* Go To Top Button */
 #go-top {
 	position: absolute;
-	top: -24px;
+	top: -30px;
   left: 50%;
-  margin-left: -30px;
+  margin-left: -30px;  
 }
 #go-top a {
 	text-decoration: none;
@@ -70,7 +70,7 @@ footer .social-links li:first-child { margin-left: 0; }
 	background-color: #525252;
 
   color: #fff;
-  font-size: 21px;
+  font-size: 26px;
   line-height: 60px;
  	border-radius: 100%;
 }
